--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ div.tr.space-b div.td {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  background: #811414;
+  background: #00af4f;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
